# shocktest

./: .env.example  .gitignore  CLAUDE.md  README.md  ShockTest_Plan_v3.md  mise.toml  pyproject.toml
.claude/: settings.local.json
analysis/: agents.py  correlation.py  helpers.py  run_all.py  shock_detector.py  significance.py  test_shock_detection.py  validation_checklist.py
chrome-extension/: manifest.json
chrome-extension/background/: service-worker.js
chrome-extension/content/: interceptor.js  polymarket.css  polymarket.js
chrome-extension/options/: options.html
chrome-extension/popup/: popup.css  popup.html  popup.js
dashboard/: package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/components/: AiAnalysisBox.tsx  CategoryBreakdown.tsx  CategoryIcon.tsx  DashboardControls.tsx  FindingsBlock.tsx  Footer.tsx  Header.tsx  Histogram.tsx  LiveAlertBanner.tsx  LoadingSpinner.tsx  PayoffCurve.tsx  PnlHeatmap.tsx  PnlTimeline.tsx  PortfolioBuilder.tsx  PriceChart.tsx  ScenarioPanel.tsx  ShocksTable.tsx  StatsCards.tsx  ThemeToggle.tsx  TradeSimulator.tsx
docs/: ChromeExtension.md  CrossCategoryHedge.md  DemoScript.md  MultiAgentPortfolio.md  Person3_Playbook.md  Plan.md  Playbook.md  Polymarket Design Challenge - NexHacks.md  RepoStructure.md  ShockTest_Playbook_v2.md
scripts/: data_shape.py  db_status.py  fetch_manifold.py  fetch_polymarket.py  flag_recent_shocks.py  inject_demo_shock.py  live_monitor.py  remove_demo_shocks.py  resample.py  seed_one_market.py  test_mongo.py  test_polymarket.py
(+15 files in other folders)
