[project]
name = "shocktest"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "polymarket-apis",
    "pymongo",
    "requests",
    "pandas",
    "numpy",
    "google-generativeai",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
]
ignore = [
    "E501", # line too long — not worth fighting during a hackathon
]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
